--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-auth.js"></script>
     <script>
-      document.addEventListener('contextmenu', function (e) {
-        e.preventDefault();
-      });
+      // document.addEventListener('contextmenu', function (e) {
+      //   e.preventDefault();
+      // });
 
-      document.addEventListener('selectstart', function (e) {
-        e.preventDefault();
-      });
+      // document.addEventListener('selectstart', function (e) {
+      //   e.preventDefault();
+      // });
     </script>
   </body>
 </html>
